@@ -4,4 +4,6 @@
 10/15@10:34pm: added most input commands
 10/17@07:36pm: added monster list functionality bar scrolling
 10/17@07:42pm: added monster list scrolling ;; was more simple than expected
+10/17@08:31pm: added dungeon re-generation and as such, stairwells
+10/17@08:45pm: fixed a memory leak issue and reduced all leaks to native ncurses leaks ;; fixed stairs overlapping occasionally
 
